--- a/main.css
+++ b/main.css
@@ -18,3 +18,14 @@
 img {
     width: 250px;
 }
+
+.dog-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: auto;
+}
+
+.animal-dog {
+    margin: auto;
+}
